--- a/Crud_WebApi/appsettings.json
+++ b/Crud_WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
   "prueba": {
-    "cn": "Data Source=DESKTOP-FIG8HS8\\SQLEXPRESS;Database=Prueba;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "cn": "Data Source=DESKTOP-FIG8HS8\\SQLEXPRESS;Database=BD_BERTOL_FRANCO;Integrated Security=True;"
   }
 }
